<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloMoon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hellomoon_play_video">Play Video</string>
    <string name="hellomoon_stop_video">Stop Video</string>
    <string name="hellomoon_play_audio">Play Audio</string>
    <string name="hellomoon_stop_audio">Stop Audio</string>
    <string name="hellomoon_description">Neil Armstrong stepping onto the moon</string>


</resources>
